# zkdrop

./: SECURITY.md
docs/: airdrop-design.md
zkdrop-cli/: .gitignore  Cargo.toml  README.md
zkdrop-cli/benches/: merkle_tree_height.rs  proving_time.rs
zkdrop-cli/contracts/: Groth16Verifier.sol  ZKDropToken.sol
zkdrop-cli/src/: circuit.rs  keccak.rs  lib.rs  main.rs  merkle.rs  poseidon.rs  secp256k1.rs
zkdrop-cli/tests/: integration_test.rs  proving_time_test.rs  test_address_check.rs  test_circuit_simplified.rs  test_debug_values.rs  test_merkle_debug.rs  test_minimal_circuit.rs  test_mock_full_circuit.rs
