[package]
name = "zkdrop-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkdrop-cli"
path = "src/main.rs"

[dependencies]
# ZK / Cryptography
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "merkle_tree", "sponge"] }

# Ethereum / Crypto
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"

# CLI and Serialization
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
# For tests

[[bench]]
name = "proving_time"
harness = false

[[bench]]
name = "merkle_tree_height"
harness = false
